Fix site search box alignment under safari

--- a/app/assets/stylesheets/modules/search_across.scss
+++ b/app/assets/stylesheets/modules/search_across.scss
@@ -148,6 +148,7 @@
   }
 
   .site-search-type {
+    display: flex;
     flex-grow: 3;
   }
 }
